<resources>
    <string name="app_name">CoinCounterRG2</string>
    <string name="action_settings">Settings</string>
    <string name="banner_prompt">Please enter in the coin count.</string>
    <string name="zero">0</string>
    <string name="penny">Penny</string>
    <string name="nickel">Nickel</string>
    <string name="dime">Dime</string>
    <string name="quarter">Quarter</string>
    <string name="status_bar_initial_string">RG</string>
    <string name="about_title">About</string>
    <string name="about_text">Made by RG for the MCON 521 Final Exam.</string>
    <string name="clear_all_title">CLEAR ALL</string>
</resources>