<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/content_main">


    <!-- Penny Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/pennyCardView"
        style="@style/MaterialCardWithBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nickelCardView"
        tools:showIn="@layout/content_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/penny"
                android:src="@drawable/penny" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pennyEditText"
                android:text="@string/zero" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Nickel Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/nickelCardView"
        style="@style/MaterialCardWithBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pennyCardView"
        app:layout_constraintEnd_toStartOf="@+id/dimeCardView"
        tools:showIn="@layout/content_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/nickel"
                android:src="@drawable/nickel" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nickelEditText"
                android:text="@string/zero" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Dime Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/dimeCardView"
        style="@style/MaterialCardWithBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nickelCardView"
        app:layout_constraintEnd_toStartOf="@id/quarterCardView"
        tools:showIn="@layout/content_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dime"
                android:src="@drawable/dime" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dimeEditText"
                android:text="@string/zero" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Quarter Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/quarterCardView"
        style="@style/MaterialCardWithBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/dimeCardView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:showIn="@layout/content_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/quarter"
                android:src="@drawable/quarter" />

            <EditText
                style="@style/edit_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quarterEditText"
                android:text="@string/zero" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</merge>